--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 API_SECRET=98hbun98h #Used when creating a JWT. It can be anything
 DB_HOST=127.0.0.1
-DB_DRIVER=postgres
+DB_DRIVER=mysql
 DB_USER=root
-DB_PASSWORD=171199
-DB_NAME=aino
-DB_PORT=5432
+DB_PASSWORD=
+DB_NAME=golang
+DB_PORT=3306
